force-app/main/default/objects/Account/fields/Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk__c</fullName>
    <description>Customer churn risk rating (LOW, MEDIUM, HIGH) calculated in Snowflake.</description>
    <label>Churn Risk</label>
    <length>20</length>
    <type>Text</type>
</CustomField>