force-app/main/default/objects/Account/fields/CSM_Email__c.field-meta.xml
<CustomField>
    <fullName>CSM_Email__c</fullName>
    <description>Email address of the Customer Success Manager (CSM) responsible for this Account. Used for sending and receiving emails with Account contacts without external domain dependencies.</description>
    <label>CSM Email</label>
    <type>Email</type>
</CustomField>