force-app/main/default/objects/Account/fields/Customer_Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Tier__c</fullName>
    <description>Customer support tier classification for SLA and service entitlement.</description>
    <inlineHelpText>Select customer support tier (Premium, Standard, or Basic).</inlineHelpText>
    <label>Customer Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>