force-app/main/default/objects/Account/fields/Escalation_SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Escalation_SLA_Hours__c</fullName>
    <description>Target SLA turnaround time in hours for case escalations.</description>
    <inlineHelpText>Enter escalation SLA in hours (cannot exceed 24 for Premium tier).</inlineHelpText>
    <label>Escalation SLA Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>