force-app/main/default/objects/Account/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description>Operational health score (1-100) calculated in Snowflake based on customer product telemetry.</description>
    <label>Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>