force-app/main/default/objects/Account/fields/Last_Snowflake_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Snowflake_Sync__c</fullName>
    <description>Timestamp of the most recent bi-directional synchronization with Snowflake.</description>
    <label>Last Snowflake Sync</label>
    <type>DateTime</type>
</CustomField>