force-app/main/default/objects/Account/fields/Usage_Hours__c.field-meta.xml
<CustomField>
    <fullName>Usage_Hours__c</fullName>
    <description>Monthly platform or compute usage hours synced from Snowflake warehouse.</description>
    <label>Usage Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>