force-app/main/default/objects/Account/validationRules/VR_Premium_SLA_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Premium_SLA_Limit</fullName>
    <active>true</active>
    <description>Enforces Escalation_SLA_Hours__c &lt;= 24 when Customer_Support_Tier__c is Premium.</description>
    <errorConditionFormula>AND(ISPICKVAL(Customer_Support_Tier__c, &quot;Premium&quot;), Escalation_SLA_Hours__c &gt; 24)</errorConditionFormula>
    <errorDisplayField>Escalation_SLA_Hours__c</errorDisplayField>
    <errorMessage>Premium tier SLA hours must not exceed 24 hours.</errorMessage>
</ValidationRule>